--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
-* {
-  box-sizing: border-box;
-}
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300;400;600&display=swap");
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+}
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
+body {
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Sans Mono", monospace;
+  background: #013565 url(house.jpg) center/cover no-repeat;
+}
+.container {
+  display: flex;
 }
